app/assets/stylesheets/custom.css.scss
@import "bootstrap-sprockets";
@import "bootstrap";

@import "font-awesome-sprockets";
@import "font-awesome";

/* --------------------------------- */
/* Conventions                       */
/* --------------------------------- */

$coffee:  #3e2200;
$white:   #ffffff;
$orange:  #ffa500;
$blue:    #0099ff;
$gray:    #bbb;

@mixin box_sizing {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

/* --------------------------------- */
/* Universal Styles                  */
/* --------------------------------- */

body {
  padding-top: 60px;
}

header {
  margin-bottom: 20px;
}

footer {
  margin-top: 20px;
}

section {
  overflow: auto;
}

textarea {
  resize: vertical;
}

h1, h2, h3, h4, h5, h6 {
  line-height: 1;
}

h1 {
  font-size: 3em;
  letter-spacing: -2px;
  margin-bottom: 15px;
}

p {
  font-size: 1.1em;
  line-height: 1.7em;
}

img {
  border-radius: 8px;
  border: 3px inset $blue;
}

.center {
  text-align: center;
}

/* --------------------------------- */
/* Bootstrap                         */
/* --------------------------------- */

.navbar {
  background-color: $coffee;
  border-color: $white;
}

.nav.navbar-nav.navbar-right li a {
  color: $white;
  &:hover {
    color: $orange;
    text-decoration: none;
  }
}

.btn {
  margin-right: 10px;
}

/* --------------------------------- */
/* Font Awesome                      */
/* --------------------------------- */

footer {
  .fa-cog {
    color: white;
  }
  .fa-fw {
    text-align: right;
  }
}

/* --------------------------------- */
/* Forms                             */
/* --------------------------------- */

input, textarea, select, .uneditable-input {
  border-radius: 5px;
  border: 1px solid $gray;
  width: 100%;
  margin-bottom: 15px;
  @include box_sizing;
}

input {
  height: auto !important;
}

#error_explanation {
  color: red;
  ul {
    color: red;
    margin: 0 0 30px 0;
  }
}

.field_with_errors {
  @extend .has-error;
  .form-control {
    color: $state-danger-text;
  }
}

/* --------------------------------- */
/* Site Logo                         */
/* --------------------------------- */

#logo {
  color: $white;
  font-size: 1.7em;
  &:hover {
    color: $orange;
    text-decoration: none;
  }
}

/* --------------------------------- */
/* Site Copyright                    */
/* --------------------------------- */

#copyright {
  color: $white;
  margin-left: 0px;
}

/* --------------------------------- */
/* Debug                             */
/* --------------------------------- */

.debug_dump {
  clear: both;
  float: left;
  width: 100%;
  margin-top: 45px;
  @include box-sizing;
}

